cmake_minimum_required(VERSION 3.26)
project(Labs)

set(CMAKE_CXX_STANDARD 23)

add_subdirectory(lr_1_1)
add_subdirectory(lr_1_2)
add_subdirectory(lr_1_3)
add_subdirectory(lr_1_4)
add_subdirectory(lr_1_5)
add_subdirectory(lr_1_6)
add_subdirectory(lr_1_7)
add_subdirectory(lr_1_8)
add_subdirectory(lr_1_9)
add_subdirectory(lr_1_10)
add_subdirectory(prog1)