add_executable(lr_2_1 lr_2_1.c)
add_executable(lr_2_2 lr_2_2.c)
add_executable(lr_2_3 lr_2_3.c)
add_executable(lr_2_4 lr_2_4.c)
add_executable(lr_2_5 lr_2_5.c)
add_executable(lr_2_6 lr_2_6.c)
add_executable(lr_2_7 lr_2_7.c)
add_executable(lr_2_8 lr_2_8.c)
add_executable(lr_2_9 lr_2_9.c)
add_executable(lr_2_10 lr_2_10.c)