add_executable(lr_1_1 lr1.1.cpp)
add_executable(lr_1_2 lr1.2.cpp)
add_executable(lr_1_3 lr1.3.cpp)
add_executable(lr_1_4 lr1.4.cpp)
add_executable(lr_1_5 lr1.5.cpp)
add_executable(lr_1_6 lr1.6.cpp)
add_executable(lr_1_7 lr1.7.cpp)
add_executable(lr_1_8 lr1.8.cpp)
add_executable(lr_1_9_1 lr1.9.1.cpp)
add_executable(lr_1_9_2 lr1.9.2.cpp)
add_executable(lr_1_10 lr1.10.cpp)